Keep learning... changed colour, but button doesn't work

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -2,4 +2,6 @@ cmake_minimum_required(VERSION 3.22.1)
 
 project(HelloWindow)
 
-add_executable(${PROJECT_NAME} main.cpp, ~/gitprojects/personal/glad/src/glad.c)
+add_executable(${PROJECT_NAME} main.cpp)
+
+add_subdirectory(/usr/local/include/glad)
